[gd_scene load_steps=7 format=2]

[ext_resource path="res://res/Assets/EndGame/Sair.png" type="Texture" id=1]
[ext_resource path="res://res/Assets/EndGame/Baixar.png" type="Texture" id=2]
[ext_resource path="res://res/Assets/EndGame/Texto.png" type="Texture" id=3]
[ext_resource path="res://res/end_game_screen.gd" type="Script" id=5]
[ext_resource path="res://res/Texture.tscn" type="PackedScene" id=6]
[ext_resource path="res://res/popups/ReadStoryPopup.tscn" type="PackedScene" id=7]

[node name="EndGameScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" parent="." instance=ExtResource( 6 )]
margin_left = -2997.76
margin_right = 5003.24
margin_bottom = 2813.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 280.0
margin_top = 182.0
margin_right = 1641.0
margin_bottom = 841.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 1361.0
margin_bottom = 659.0
size_flags_horizontal = 3
custom_constants/separation = 79

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 1361.0
margin_bottom = 215.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 63.0
margin_right = 1298.0
margin_bottom = 215.0
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 294.0
margin_right = 1361.0
margin_bottom = 294.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 373.0
margin_right = 1361.0
margin_bottom = 509.0
alignment = 1

[node name="Baixar" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 482.0
margin_right = 878.0
margin_bottom = 136.0
toggle_mode = true
texture_normal = ExtResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 588.0
margin_right = 1361.0
margin_bottom = 647.0
alignment = 1

[node name="Sair" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 617.0
margin_right = 744.0
margin_bottom = 59.0
texture_normal = ExtResource( 1 )

[node name="ReadStoryPopup" parent="." instance=ExtResource( 7 )]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Baixar" to="." method="_on_Baixar_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/Sair" to="." method="_on_Sair_pressed"]
